--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,6 @@
   "routes": [
     { "handle": "filesystem" },
     { "src": "/.*", "dest": "/dist/index.html" }
-  ]
+  ],
+  "outputDirectory": "dist"
 }
